# Modoo

./: .gitignore  CMakeLists.txt  vcpkg.json
backend/: CMakeLists.txt  pytorch_backend.cpp  pytorch_backend.h
core/: CMakeLists.txt  context.cpp  context.h  device.h  framework.h  model_wrapper.h  shape.h  vcpkg.json
core/backend/: CMakeLists.txt  pytorch_backend.cpp  pytorch_backend.h
core/data/: modoo_data.h  type.h
core/layer/: base_layer.h
core/operator/: base_operator.h
core/test/: CMakeLists.txt  UnitTest.cpp
core/utils/: backend_utils.h  id_generator.cpp  id_generator.h
data/: chunk.h
engine/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  test_context.cpp
test/utils/: test_id_generator.cpp
